# stock-trek

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: data.rs  lib.rs
src/bindings/: mod.rs  python.rs  stats.rs
